@@ -507,3 +507,7 @@ Gusta-BH
 Tim Kramer
     - Provided guidance on getting psad to be compatible with the upstart init
       daemon on RHEL systems.  This effort was tracked via issue #12 on github.
+
+Wolfgang Breyha
+    - Submitted a patch to allow VLAN interfaces and interface aliases in
+      IGNORE_INTERFACES.  This fixes issue #8 on github.
